# shapepipe

./: .buildinfo  .gitignore  .gitlab-ci.yml  .swp  .travis.yml  =3.0.1  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.rst  about.html  basic_execution.html  compile  compile_everything_atlas3101_dev_common  condaenv.c8wpknjw.requirements.txt  condaenv.t94tvtfa.requirements.txt  configuration.html  contributing.html  contributors.html  dependencies.html  develop.txt  environment-dev.yml  environment.yml  genindex.html  index.html  index.rst  install_shapepipe  installation.html  module_develop.html  module_example.html  nsswitch.conf  objects.inv  pipeline_tutorial.html  post_processing.html  py-modindex.html  pyproject.toml  random_cat.html  requirements.txt  (+81 more)
.doctrees/: about.doctree  basic_execution.doctree  configuration.doctree  contributing.doctree  contributors.doctree  dependencies.doctree  index.doctree  installation.doctree  module_develop.doctree  module_example.doctree  pipeline_tutorial.doctree  post_processing.doctree  random_cat.doctree  shapepipe.doctree  shapepipe.info.doctree  shapepipe.modules.doctree  shapepipe.modules.find_exposures_package.doctree  shapepipe.modules.find_exposures_package.find_exposures.doctree  shapepipe.modules.get_images_package.doctree  shapepipe.modules.get_images_package.get_images.doctree  shapepipe.modules.make_cat_package.doctree  shapepipe.modules.make_cat_package.make_cat.doctree  shapepipe.modules.mask_package.doctree  shapepipe.modules.mask_package.mask.doctree  shapepipe.modules.match_external_package.doctree  shapepipe.modules.match_external_package.match_external.doctree  shapepipe.modules.mccd_package.doctree  shapepipe.modules.mccd_package.mccd_interpolation_script.doctree  shapepipe.modules.mccd_package.mccd_plot_utilities.doctree  shapepipe.modules.mccd_package.shapepipe_auxiliary_mccd.doctree  shapepipe.modules.merge_headers_package.doctree  shapepipe.modules.merge_headers_package.merge_headers.doctree  shapepipe.modules.merge_sep_cats_package.doctree  shapepipe.modules.merge_sep_cats_package.merge_sep_cats.doctree  shapepipe.modules.merge_starcat_package.doctree  shapepipe.modules.merge_starcat_package.merge_starcat.doctree  shapepipe.modules.module_decorator.doctree  shapepipe.modules.module_runners.doctree  shapepipe.modules.ngmix_package.doctree  shapepipe.modules.ngmix_package.ngmix.doctree  (+46 more)
.github/: pull_request_template.md
_modules/: index.html
_sources/: configuration.md.txt  contributing.md.txt  contributors.md.txt  dependencies.md.txt  index.rst.txt  shapepipe.info.rst.txt  shapepipe.modules.find_exposures_package.find_exposures.rst.txt  shapepipe.modules.find_exposures_package.rst.txt  shapepipe.modules.get_images_package.get_images.rst.txt  shapepipe.modules.get_images_package.rst.txt  shapepipe.modules.make_cat_package.make_cat.rst.txt  shapepipe.modules.make_cat_package.rst.txt  shapepipe.modules.mask_package.mask.rst.txt  shapepipe.modules.mask_package.rst.txt  shapepipe.modules.match_external_package.match_external.rst.txt  (+61 more)
branches/isap_package/sprite 2/: ._run_sprite.cc  ._sr_util.h  CMakeLists.txt  run_sprite.cc
example/: config.ini  (+2 more)
modules/isap_package/: CMakeLists.txt  LICENSE.CeCILL  cmake_install.cmake
modules/isap_package/include/: Filter.h  MR1D1D.h  MR1D_Obj.h  MR2D1D.h  MR3D_Obj.h  MR_Abaque.h  MR_Contrast.h  MR_Deconv.h  MR_Rayleigh.h  MR_Sigma.h  MR_SoftRegul.h  MR_Threshold.h  Mr_FewEvent2d.h  Pyr1D.h  fractal.h
modules/isap_package/python-wrappers/: license.txt
modules/isap_package/python-wrappers/IsapPyWrapper/sparse2d/: example_mr_transform.py  example_mr_transform.py~  mr_transform.py
modules/isap_package/python-wrappers/src/: isap_great3_sparse2d.cpp  isap_great3_sparse2d.pyste  isap_great3_tools.pyste
modules/isap_package/sprite 2/: ._sprite.h  ._sr_util.cc  sprite.cc
modules/isap_package/src/: INSTALL  Makefile  VERSION  im3d_deconv.cc  mr_deconv.cc  mr_filter.cc  mr_gmca.cc  mr_info.cc  mr_recons.cc  run_sprite.cc
modules/isap_package/src/include/: Atrou3D.h  FCur.h  Fista.h  GMCA.h  MR1D_Segment.h  MR1D_Sigma.h  MR_CorrNoise.h  MR_Support.h  MW_Deconv.h  MW_Filter.h  MeyerWT.h  Mr_FewEvent.h  SB_Filter.h
modules/isap_package/src/libsparse1d/: Atrou1D.cc  Atrou1D.h  Atrou3D.cc  Filter.cc  GMCA.cc  Lifting.cc  MR1D_Atrous.cc  MR1D_Filter.h  MR1D_Filtering.cc  MR1D_MMT.cc  MR1D_Mallat.cc  MR1D_NoiseModel.h  MR1D_PyrTrans.cc  MR1D_Regul.h  MR1D_Segment.cc  MR1D_Transf.cc  MR2D1D.cc  MR3D_Obj.cc  MeyerWT1D.cc  MeyerWT1D.h  Mr_FE.h  Mr_FewEvent.cc  Mr_FewEvent1d.cc  Mr_FewEvent1d.h  Pyr1D.cc  SB_Filter1D.cc  SB_Filter1D.h  WT1D_FFT.cc  WT2D_CF.cc  fractal.cc
modules/isap_package/src/libsparse2d/: CMem.cc  CMem.h  FCur.cc  IM_Deconv.cc  IM_Deconv.h  LineCol.cc  LineCol.h  MR1D1D.cc  MR_Contrast.cc  MR_CorrNoise.cc  MR_Feauveau.cc  MR_Filter.cc  MR_G_Transf.cc  MR_Haar.cc  MR_IPyrMed.cc  MR_ImaObj.cc  MR_Mallat_A_Trou.cc  MR_NoiseModel.cc  MR_NoiseModel.h  MR_Obj.cc  MR_OrthoRegul.cc  MR_Psup.cc  MR_Psupport.h  MR_Rayleigh.cc  MR_Recon.cc  MR_Sigma.cc  MR_SoftRegul.cc  MR_Trans.cc  MR_io.cc  MW_Deconv.cc  MW_Filter.cc  MinMax.cc  sprite.cc  sr_util.cc  sr_util.h
modules/isap_package/src/libtools/: Array.h  Border.h  CErf.h  CoaddCorrel.cc  CoaddCorrel.h  DCT.cc  DefFunc.cc  DefFunc.h  DefMath.cc  DefMath.h  FFTN_1D.cc  FFTN_1D.h  FFTN_2D.cc  FFTN_2D.h  GenMedian.h  GetLongOptions.h  GetOpt.cc  GlobalInc.h  IM3D_IO.cc  IM3D_IO.h  IM_Clean.cc  IM_Color.h  IM_Deconv.cc  IM_Deconv.h  IM_Edge.cc  IM_Edge.h  IM_FFTPow2.cc  IM_Fourier.cc  IM_IO.cc  IM_IO.h  IM_IOCol.h  IM_IOTools.h  IM_Lut.h  IM_Math.h  IM_MathFunc.cc  IM_Maxima.cc  IM_Morpho.cc  IM_Morpho.h  IM_Noise.cc  IM_Noise.h  (+36 more)
modules/isap_package/src/python-wrappers/: MANIFEST.in  README.txt  launch_python.cmd  setup.py
modules/isap_package/src/python-wrappers/IsapPyWrapper/sparse2d/: test_mr_transform.py  test_pyMR_borders.py
modules/isap_package/src/python-wrappers/src/: isap_great3_tools.cpp
modules/isap_package/src/sprite 2/: ._CMakeLists.txt  sprite.h  sr_util.cc  sr_util.h
(+4799 files in other folders)
