[tool.poetry]
name = "shapepipe"
version = "0.1.0"
description = "Weak-lensing shape measurement"
authors = [
	"Sam Farrens",
	"Axel Guinot",
	"Martin Kilbinger <martin.kilbinger@cea.fr>",
]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
cmake = "^3.27.2"
treecorr = "^4.3.3"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
pandas = "^2.1.0"

cs-util = "^0.0.5"
numpy = "^1.19.1"
autoconf = "^2023.10.23.3"
galsim = "^2.5.1"
libtool = "^1.1.0"
numba = "^0.58.1"
modopt = "^1.6.1"

#python-pysap = { git = "https://github.com/martinkilbinger/pysap.git", branch = "fix_versions" }
ngmix = { git = "https://github.com/aguinot/ngmix", branch = "stable_version" }
stile = { git = "https://github.com/tobias-liaudat/Stile", tag = "v0.1" }
pywavelets = "^1.4.1"
joblib = "^1.3.2"
sip-tpv = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pydocstyle = "^6.3.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
