[project]
name = "shapepipe"
version = "1.0.2"
description = "Galaxy shape measurement pipeline."
readme = "README.rst"
authors = [
    { name = "Samuel Farrens", email = "samuel.farrens@cea.fr" },
    { name = "Axel Guinot", email = "axel.guinot@cea.fr" },
    { name = "Martin Kilbinger", email = "martin.kilbinger@cea.fr" }
]
license = { "file" = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "joblib>=0.13",
    "modopt>=1.2",
    "numpy>=1.14"
]


[project.optional-dependencies]
doc = [
    "myst-parser",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx-book-theme"
]
lint = [
    "black",
    "isort"
]
release = [
    "build",
    "twine",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-pycodestyle",
    "pytest-pydocstyle"
]
dev = ["shapepipe[doc,lint,release,test]"]

[project.scripts]
shapepipe_run = "shapepipe.shapepipe_run:main"

[tool.pytest.ini_options]
addopts = "--verbose --cov=shapepipe"
testpaths = ["shapepipe"]